--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -8,6 +8,7 @@
 <body>
     <h1>Olá, Mundo!</h1>
     <hr>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor necessitatibus quas hic doloribus est impedit temporibus reprehenderit dolores eius, dolore provident amet! Dolor eos pariatur esse nulla iure et cum.</p>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero quia quibusdam dolorum inventore molestiae enim excepturi facere modi accusamus facilis ipsum porro, alias placeat esse dolores aut ipsa sit accusantium.</p>
 </body>
 </html>
