inclui e depois apaguei

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -8,8 +8,8 @@
 <body>
     <h1>Olá, Mundo!</h1>
     <hr>
+    <h1>Hello</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor necessitatibus quas hic doloribus est impedit temporibus reprehenderit dolores eius, dolore provident amet! Dolor eos pariatur esse nulla iure et cum.</p>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero quia quibusdam dolorum inventore molestiae enim excepturi facere modi accusamus facilis ipsum porro, alias placeat esse dolores aut ipsa sit accusantium.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem corrupti cum fuga nesciunt eos nulla consequatur voluptatibus! Enim quas, quisquam, fuga odio cumque, qui maxime id eius alias dolorem eum!</p>
 </body>
 </html>
